fix: long log entries creating horizontal scroll bar and some weird drawing issues associated with that

--- a/ui/mods/DevConsoleScreen.css
+++ b/ui/mods/DevConsoleScreen.css
@@ -149,5 +149,6 @@
 {
     margin-left: 0.7rem;
     margin-right: 0.2rem;
+    overflow-wrap: break-word;
     /*line-height: 1.3rem;*/
 }
